<resources>
    <string name="app_name">APMIS MOBILE</string>
    <string name="prompt_email">Apmis ID</string>
    <string name="prompt_password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="action_sign_in">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="password_instruction">We just need your APMIS ID and Phone Number and we will send you a reset link</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="welcome_text">Where do you want to go ?</string>
    <string name="profile">Profile</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="apmis_id_placeholder">APMIS ID</string>
    <string name="password_placeholder">PASSWORD</string>
    <string name="password_placeholder_lower_case">Password</string>
    <string name="security_questions">security-questions</string>
    <string name="genders">genders</string>
    <string name="input_error">Check field</string>
    <string name="security_answer">Security Answer</string>
    <string name="sign_out">Sign out</string>
    <string name="loading">Loading ...</string>
    <string name="view">View</string>
    <string name="buy">Accounts</string>
    <string name="chat">Chat</string>
    <string name="read">Read</string>
    <string name="find">Search</string>
    <string name="welcome_header">APMIS CEP</string>
    <string name="reminders">Reminders</string>
    <string name="facilities">Facilities</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user_image">User Image</string>
    <string name="write_message">Write a message...</string>
    <string name="send_button">send button</string>
    <string name="facility_name">Light Hospital</string>
    <string name="clinic_name">Emergency Clinic</string>
    <string name="appointment_date">Jan 30</string>
    <string name="appointment_time">10:00am</string>
    <string name="recently_booked">Recently Booked</string>
    <string name="previous_appointments">Previous Appointments</string>
    <string name="more">Show more</string>
    <string name="appointment_type">Appointment Type:</string>
    <string name="new_item">New</string>
    <string name="follow_up">Follow up</string>
    <string name="appointment_description">Appointment Description:</string>
    <string name="appointment_reason">Appointment Reason:</string>
    <string name="clinic_schedule">Clinic Schedule:</string>
    <string name="your_schedule">Your Schedule:</string>
    <string name="set_reminder">Set Reminder:</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="select_your_schedule">Select your schedule</string>
    <string name="set_reminder_title">Set Reminder</string>
    <string-array name="select">
        <item>@string/loading</item>
    </string-array>
    <string-array name="select_appt_type">
        <item>Select Appointment type</item>
    </string-array>
    <string-array name="select_hospital">
        <item>Select Hospital</item>
    </string-array>
    <string-array name="select_clinic">
        <item>Select Clinic</item>
    </string-array>
    <string-array name="select_service_category">
        <item>Select Service Category</item>
    </string-array>
    <string-array name="select_whom_to_see">
        <item>Select whom to see</item>
    </string-array>
    <string-array name="select_service_price_level">
        <item>Select service price level</item>
    </string-array>
    <string-array name="select_class">
        <item>Select Class</item>
    </string-array>
    <string-array name="select_schedule">
        <item>Select Schedule</item>
    </string-array>
    <string-array name="select_time">
        <item>Select Time</item>
    </string-array>
    <string-array name="select_service">
        <item>Select Service</item>
    </string-array>
    <string-array name="select_hmo">
        <item>Select HMO</item>
    </string-array>
    <string-array name="select_price">
        <item>Select Price</item>
    </string-array>
    <string-array name="trans_history">
        <item>Last 24 hours</item>
        <item>Last 7 days</item>
        <item>Last 30 days</item>
        <item>Last 3 months</item>
        <item>Last 6 months</item>
        <item>Last Year</item>
    </string-array>
    <string-array name="filter">
        <item>Hospital</item>
        <item>Doctor</item>
        <item>Nurse</item>
        <item>Service</item>
        <item>Pharmacy</item>
        <item>Ambulance</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_prompt">Please enter your\nAPMIS password</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="genotype">Genotype</string>
    <string name="blood_group">Blood Group</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>
    <string name="sugar_level">Sugar Level</string>
    <string name="body_mass_index">BMI</string>
    <string name="temp_label">Temp (&#176;C) .</string>
    <string name="dr_mofe_ejegi">Dr. Mofe Ejegi</string>
    <string name="cart">Cart</string>
    <string name="appointment_hospital">Appointment Hospital</string>
    <string name="my_profile">My Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
</resources>