<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/white"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="24dp"
                android:layout_height="28dp"
                android:src="@drawable/arrowhead"/>

            <TextView
                android:layout_gravity="clip_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:orientation="vertical">

        <TextView
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_instruction"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/apmis_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/prompt_email"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/phone_number"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient"
            android:text="@string/reset_password"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>