<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/appointment_background_white"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:minHeight="100dp"
    android:animateLayoutChanges="true"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:background="@drawable/appointment_background_blue">

        <LinearLayout
            android:id="@+id/date_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appointment_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/appointment_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/appointment_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/appointment_time"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="2dp"
            android:layout_alignBottom="@+id/date_time_layout"
            app:srcCompat="@drawable/ic_time_turquoise"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="70"
        android:padding="10dp">

        <TextView
            android:id="@+id/facility_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facility_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_alignLeft="@+id/clinic_name_tv"
            android:layout_toLeftOf="@+id/popup_menu_image"
            android:layout_toStartOf="@+id/popup_menu_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/clinic_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clinic_name"
            android:textSize="12sp"
            android:layout_below="@+id/facility_name_tv"/>

        <ImageView
            android:id="@+id/popup_menu_image"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_more_options"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>



    </RelativeLayout>


</LinearLayout>