<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_hospital"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


            <!--TODO Spinner would crash API <21 -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="35dp">

                <Spinner
                    android:id="@+id/select_hospital_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/spinner_background_no_background_color"
                    android:entries="@array/select_hospital"
                    android:theme="@style/AddAppointmentSpinner" />

                <ProgressBar
                    android:id="@+id/select_hospital_progress"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="35dp"
                    android:layout_marginEnd="35dp"/>

                <Button
                    android:id="@+id/select_hospital_refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="33dp"
                    android:layout_marginEnd="33dp"
                    android:background="@drawable/ic_error_refresh"
                    android:visibility="gone"/>

            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp">

                <Spinner
                    android:id="@+id/select_appt_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/AddAppointmentSpinner"
                    android:background="@drawable/spinner_background_no_background_color"
                    android:entries="@array/select_appt_type" />

                <ProgressBar
                    android:id="@+id/select_appt_type_progress"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="35dp"
                    android:layout_marginEnd="35dp"/>

                <Button
                    android:id="@+id/select_appt_type_refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="33dp"
                    android:layout_marginEnd="33dp"
                    android:background="@drawable/ic_error_refresh"
                    android:visibility="gone"/>



            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp">

                <Spinner
                    android:id="@+id/select_clinic_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/AddAppointmentSpinner"
                    android:background="@drawable/spinner_background_no_background_color"
                    android:entries="@array/select_clinic" />

                <ProgressBar
                    android:id="@+id/select_clinic_progress"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="35dp"
                    android:layout_marginEnd="35dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/select_clinic_refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="33dp"
                    android:layout_marginEnd="33dp"
                    android:background="@drawable/ic_error_refresh"
                    android:visibility="gone"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp">

                <Spinner
                    android:id="@+id/select_service_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/AddAppointmentSpinner"
                    android:background="@drawable/spinner_background_no_background_color"
                    android:entries="@array/select_service_category" />

                <ProgressBar
                    android:id="@+id/select_service_progress"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="35dp"
                    android:layout_marginEnd="35dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/select_service_refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="33dp"
                    android:layout_marginEnd="33dp"
                    android:background="@drawable/ic_error_refresh"
                    android:visibility="gone"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="35dp">

                <Spinner
                    android:id="@+id/whom_to_see_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/AddAppointmentSpinner"
                    android:background="@drawable/spinner_background_no_background_color"
                    android:entries="@array/select_whom_to_see" />

                <ProgressBar
                    android:id="@+id/select_employee_progress"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="35dp"
                    android:layout_marginEnd="35dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/select_employee_refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="33dp"
                    android:layout_marginEnd="33dp"
                    android:background="@drawable/ic_error_refresh"
                    android:visibility="gone"/>

            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_reason"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


            <EditText
                android:id="@+id/appointment_reason_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_marginBottom="35dp"
                android:inputType="text"
                android:hint="Enter your reason here"
                android:background="@drawable/textview_background_no_background_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clinic_schedule"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="35dp">

                <Spinner
                    android:id="@+id/clinic_schedule_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:theme="@style/AddAppointmentSpinner"
                    android:background="@drawable/spinner_background_no_background_color"
                    android:entries="@array/select_schedule" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_schedule"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/your_schedule_textview"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:text="@string/select_your_schedule"
                android:drawableRight="@drawable/ic_schedule_date"
                android:background="@drawable/textview_background_no_background_color"/>

            <Switch
                android:id="@+id/set_reminder_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:checked="true"
                android:switchTextAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/set_reminder"
                android:textSize="18sp" />

            <Button
                android:id="@+id/book_appointment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:text="@string/book_appointment"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#fff" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>